--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>SPM BIOLOGY NOTES</title>
+	<link rel="stylesheet" type="text/css" href="css/spmbio.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="">
+		<img src="img/website-backdrop.png">
 		<h1>SPM BIO NOTES</h1>
 		</header>
 
@@ -14,7 +15,7 @@
 		<main>
 			<h2>UM BIOINFORMATICS SOCIAL ENGAGEMENT PROJECT</h2>
 			<p>An initiative by first year Bioinformatics students of University of Malaya to help a vulnerable group of society.(SPM students 2020). A survery was carried out to identify the topics of Form 4 and Form 5 that students struggle with and the students were aided with access to online notes for the said topics.</p>
-			<img src="">
+			<img src="img/2website-backdrop.png">
 
 			<!-- NOTES -->
 			<h2> NOTES FOR SPM BIO TOPICS</h2>
@@ -26,7 +27,7 @@
 			</ol>
 
 			<!-- other resources -->
-			<H2> lINKS FOR OTHER RESOURCES. CLICK ON THE LINKS BELOW!</H2>
+			<H2> Link for other resources. CLICK ON THE LINKS BELOW!</H2>
 			<ul>
 				<li>website</li>
 			</ul>
@@ -35,7 +36,7 @@
 
 		<!-- FOOTER ELEMENT -->
 		<footer>
-			<p> This site was created for the prupore of a social engagement project. &copy; SEUMBIOINFO2020 </p>
+			<p> This site was created for the purpose of a social engagement project. &copy; SEUMBIOINFO2020 </p>
 		</footer>
 </body>
 </html>
