adjust font and image

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 		<!--main element  -->
 		<main>
 			<h2>UM BIOINFORMATICS SOCIAL ENGAGEMENT PROJECT</h2>
-			<p>An initiative by first year Bioinformatics students of University of Malaya to help a vulnerable group of society.(SPM students 2020). A survery was carried out to identify the topics of Form 4 and Form 5 that students struggle with and the students were aided with access to online notes for the said topics.</p>
+			<p>An initiative by first year Bioinformatics students of University of Malaya to help a vulnerable group of society.(SPM students 2020). 
+			A survery was carried out to identify the topics of Form 4 and Form 5 that students struggle with and the students were aided with access to online notes for the said topics.</p>
 			<img src="img/2website-backdrop.png">
 
 			<!-- NOTES -->
 			<h2> NOTES FOR SPM BIO TOPICS</h2>
 			<ol>
-				<li> 1 file</li>
-				<li> 2 file</li>
-				<li> 3 file</li>
-				<li> 4 file</li>
+				<li> file</li>
+				<li> file</li>
+				<li> file</li>
+				<li> file</li>
 			</ol>
 
 			<!-- other resources -->
