--- a/index.html
+++ b/index.html
@@ -8,38 +8,35 @@
 	<!-- header element -->
 	<header>
 		<img src="img/website-backdrop.png">
-		<h1>SPM BIO NOTES</h1>
 		</header>
 
 		<!--main element  -->
 		<main>
-			<h2>UM BIOINFORMATICS SOCIAL ENGAGEMENT PROJECT</h2>
-			<p>An initiative by first year Bioinformatics students of University of Malaya to help a vulnerable group of society.(SPM students 2020). A survery was carried out to identify the topics of Form 4 and Form 5 that students struggle with and the students were aided with access to online notes for the said topics.</p>
-			<div>
-				<img src="img/2website-backdrop.png">
-			</div>
-			
-
+			<h2> <strong>UM BIOINFORMATICS SOCIAL ENGAGEMENT PROJECT</strong>  </h2>
+			<hr>
+			<p>An initiative by first year Bioinformatics students of University of Malaya to help a vulnerable group of society.(SPM students 2020).<br> A survery was carried out to identify the topics of Form 4 and Form 5 that students struggle with and the students were aided with access to online notes for the said topics.</p>
+			<img src="img/2website-backdrop.png">
 			<!-- NOTES -->
-			<h2> NOTES FOR SPM BIO TOPICS</h2>
+			<h2><strong> NOTES FOR SPM BIO TOPICS </strong></h2>
 			<ol>
-				<li> file</li>
-				<li> file</li>
-				<li> file</li>
-				<li> file</li>
+				<li> <a href="">file</a></li>
+				<li> <a href="">file</a></li>
+				<li> <a href="">file</a></li>
+				<li> <a href="">file</a></li>
 			</ol>
 
 			<!-- other resources -->
-			<H2> Link for other resources. CLICK ON THE LINKS BELOW!</H2>
+			<H2> Link for other resources.<strong>CLICK ON THE LINKS BELOW!</strong> </H2>
 			<ul>
-				<li>website</li>
+				<li><a href="">websites</a></li>
+				<li><a href="">websites</a></li>
+				<li><a href="">websites</a></li>
 			</ul>
-
 		</main>
 
 		<!-- FOOTER ELEMENT -->
 		<footer>
-			<p> This site was created for the purpose of a social engagement project. &copy; SEUMBIOINFO2020 </p>
+			<p> This site was created for the purpose of a social engagement project. CONTACT US <br>&copy; SEUMBIOINFO2020 </p>
 		</footer>
 </body>
 </html>
