mitosis and meiosis

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>SPM BIOLOGY NOTES</title>
 	<link rel="stylesheet" type="text/css" href="css/spmbio.css">
+	<link rel="icon" href="img/logo-se.png"
 </head>
 <body>
 	<!-- header element -->
@@ -19,18 +20,19 @@
 			<!-- NOTES -->
 			<h2><strong> NOTES FOR SPM BIO TOPICS </strong></h2>
 			<ol>
-				<li> <a href="">file</a></li>
-				<li> <a href="">file</a></li>
-				<li> <a href="">file</a></li>
-				<li> <a href="">file</a></li>
+				<li> <a href="https://drive.google.com/file/d/195WSAtepMRcVYZbvpHdevKfqfe56QInz/view?usp=sharing">Mitosis</a></li>
+				<li> <a href="https://drive.google.com/file/d/11U86hE91Dc_F5T9G0K3CLN7DEm4W2dcE/view?usp=sharing">Meisosis</a></li>
+				<li> <a href="">Coordination</a></li>
+				<li> <a href="">Response</a></li>
 			</ol>
 
 			<!-- other resources -->
-			<H2> Link for other resources.<strong>CLICK ON THE LINKS BELOW!</strong> </H2>
+			<H2> Link for quizzes.<strong>CLICK ON THE LINKS BELOW!</strong> </H2>
 			<ul>
-				<li><a href="">websites</a></li>
-				<li><a href="">websites</a></li>
-				<li><a href="">websites</a></li>
+				<li><a href="https://quizizz.com/join/quiz/5ee23abb3da745001b5886aa/start?studentShare=true">Mitosis</a></li>
+				<li><a href="">Meiosis</a></li>
+				<li><a href="https://quizizz.com/join/quiz/5ee23abb3da745001b5886aa/start?studentShare=true">Coordination</a></li>
+				<li><a href="https://quizizz.com/join/quiz/5e8214ee88f22f001b1944f2/start?studentShare=true">Response</a></li>
 			</ul>
 		</main>
 
