--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		<!-- FOOTER ELEMENT -->
 		<footer>
-			<p> This site was created for the purpose of a social engagement project. CONTACT US <br>&copy; SEUMBIOINFO2020 </p>
+			<p> This site was created for the purpose of a social engagement project. We would like to thank all the group members, our lecturer, teachers and students for supporting our website. CONTACT US <br>&copy; SEUMBIOINFO2020 </p>
 		</footer>
 </body>
 </html>
